# repodepo

./: .gitignore  .replit  AKTARIM_PROMPT.md  README.md  agentread  backup.sh  nginx-hotpulse.conf  nginx.conf  nginx_http_only.conf  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  restore.sh  run.sh  setup.sh  start.sh  start_windows.bat  update.sh
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted--Administrator-185-254-28-39-MINGW64-Desktop-hotpulse-m_1782566869367.txt  Pasted--Administrator-185-254-28-39-MINGW64-Desktop-hotpulse-m_1782568631514.txt  Pasted--Administrator-185-254-28-39-MINGW64-Desktop-hotpulse-m_1782846525318.txt  Pasted--Administrator-185-254-28-39-MINGW64-Desktop-hotpulse-m_1782881471886.txt  Pasted--Administrator-185-254-28-39-MINGW64-Desktop-hotpulse-m_1782881645063.txt  Pasted--Administrator-185-254-28-39-MINGW64-Desktop-hotpulse-m_1782889547766.txt  Pasted--Administrator-185-254-28-39-MINGW64-Desktop-hotpulse-m_1782893334006.txt  Pasted--Administrator-185-254-28-39-MINGW64-Desktop-hotpulse-m_1782944261848.txt  Pasted--C-Users-Administrator-curl-s-http-127-0-0-1-8000-finds_1782830905191.txt  Pasted--C-cd-C-C-md-win-acme-C-tar-xf-win-acme-zip-C-win-acme-_1782778965072.txt  Pasted--C-cd-C-C-md-win-acme-C-tar-xf-win-acme-zip-C-win-acme-_1782779036828.txt  Pasted--C-win-acme-cd-C-nginx-C-nginx-nginx-s-stop-C-nginx-cd-_1782779170190.txt  Pasted--PostgreSQL-Client-Authentication-Configuration-File--1_1782584950732.txt  Pasted--venv-Administrator-185-254-28-39-MINGW64-Desktop-hotpu_1782568307021.txt  (+50 more)
docs/: seo.md
(+11557 files in other folders)
