[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "dj-database-url==3.1.2",
    "django==4.2.16",
    "django-cors-headers==4.4.0",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.3.1",
    "gunicorn==22.0.0",
    "pdfplumber>=0.11.9",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.12",
    "pyjwt>=2.13.0",
    "python-dotenv==1.0.1",
    "requests==2.34.2",
    "waitress==3.0.1",
    "whitenoise==6.7.0",
]
