[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "cryptography>=49.0.0",
    "dj-database-url>=3.1.2",
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "gevent>=26.5.0",
    "gunicorn>=26.0.0",
    "html2text>=2025.4.15",
    "imageio-ffmpeg>=0.6.0",
    "pillow>=12.3.0",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlparse>=0.5.5",
    "waitress>=3.0.2",
    "whitenoise>=6.12.0",
]
